# Python-Mega-Course-from-Udemy

./: README.md  data2.txt  pyproject.toml
Day_1/: Day_1.py
Day_10_try-except_continue_exceptions/: bonus.py  main.py
Day_11_custom-functions/: Bonus_example.py  main.py
Day_12_arguments_multiple-arguments_decoupling-output/: bonus.py  main.py
Day_13_default-arg_doc-strings_decouple-functions/: bonus.py  main.py
Day_14_local-modules_import/: functions.py  main.py  test.py
Day_15_standard-modules_import_git-introduction/: e1_glob_lib.py  e2_csv_lib.py  e4_webbrowser.py  main.py
Day_16_third-party-modules_gui_github/: cli.py  gui.py
Day_17_gui-buttons_gui-text-boxes/: functions.py  gui.py
Day_18_Build_a_To-do_App_with_Python_(Various_GUI_Styles)/: functions.py  gui.py
Day_19_App_with_Python_Build_a_Web_App_Version/: fd.py  functions.py  todos.txt  web.py
Day_21_Build_a_Project_Showcase_Website_with_Python_Part1/: main.py
Day_22_Build_a_Project_Showcase_Website_with_Python_Part2/: main.py
Day_23_Build_a_Project_Showcase_Website_with_Python_Part3/: Home.py  send_email.py
Day_24_Generate_PDF_Documents_with_Python/: main.py
Day_25_Generate_PDF_Invoices_from_Excel_Documents_Part_1/: main.py
Day_25_Generate_PDF_Invoices_from_Excel_Documents_Part_1_and_Part_2/: main.py
Day_26_Build_a_Daily_News_Digest_with_Python_Part_1/: main.py
Day_26_and_27_Build_a_Daily_News_Digest_with_Python_Part_1-2/: main.py
Day_29_Build_a_Historical_Weather_Data_API_with_Python_Part_1/: main.py  st_main.py
Day_2_(Todo List App)_while-loop_methods/: main.py  main2.py
(+118 files in other folders)
