[tool.poetry]
name = "python-mega-course"
version = "0.1.0"
description = ""
authors = ["Alexander_Levkin <levkin.alexan@gmail.com>"]
readme = "README.md"
packages = [{include = "python_mega_course"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
