[tool.poetry]
name = "python mega course"
version = "0.1.0"
description = ""
authors = ["Alexander_Levkin <levkin.alexan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.1"
pysimplegui = "^4.60.5"
streamlit = "^1.23.1"
fpdf = "^1.7.2"
openpyxl = "^3.1.2"
flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
